	MBSEBBS History.

	The good news is at the bottom :-)

v0.00	Started work on the Rapidbbs sources to make new structures, 
	headerfiles and makefiles.
	The whole thing will include Fidonet echomail and tic file processing.

v0.01	Until v0.06 lots of sourcecode fixes, bugs removed which became 
	visible after writing the new header and makefiles. Included common
	and jamapi libraries. The jamapi is not in use yet but will be the
	final message base format.

	Rewritten the mbse deamon. This deamon monitors the bbs and all the
	utilities.

	Written an import util to import textfiles from the databases exported
	by a little Pascal program that exports the RA databases from the DOS
	bbs.

	Started writing a new setup utility. While doing this the old config
	program is being stripped down.

	Renamed the filelist program to allfiles.

v0.06   In the internal mbsed server structure added information for user
        online messages. Added ADIS:2,pid,flag; set users Do Not Disturb
        flag, also changed the bbs to sent that flag.

        Added Status commands to the mbsed, test for BBS open, and Zone
        Mail Hour. 2 new statements in etc/mbsed.conf. The mbsebbs now
        tests at startup for ZMH and BBS open. If it is closed the user is
        disconnected with the reason why.

v0.07	The new structures are ready. The bbs can run with local mail only.

	Renamed the filepack program to mbfile, it will do a lot more later.

	Removed the whoson program, the functions are in the setup program now.

	Added in the setup program the oneliner editor, protocols editor,
	language setup editor, limits editor.
	The oneliner editor has an import facility to import plain textfiles
	to add oneliners.

	Changed structures again, lastcaller and ttyinfo.

	Removed the usered program, the users editor is in setup now.

	Fixed the download (non batching) function DownloadB, it does work
	more or less. Changed the calling program from execl() to system()