@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id:
+dnl $Id$
 
 AC_INIT(lib/libs.h)
 AM_CONFIG_HEADER(config.h)
